--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,14 @@
 <header>
   <span>cwitter</span>
   <div>
-    <button *ngIf="user" (click)="logout()">logout</button>
+    <div *ngIf="user">
+      <button (click)="logout()">logout</button>
+      <button routerLink="/user">Profilo</button>
+    </div>
+
     <div *ngIf="!user">
       <button routerLink="/login">login</button>
-      <button>register</button>
+      <button routerLink="/register">register</button>
     </div>
   </div>
 </header>
